--- a/homework1/src/main/resources/l10n_en.properties
+++ b/homework1/src/main/resources/l10n_en.properties
@@ -1,4 +1,9 @@
 answer.right=Right
 answer.wrong=Wrong
+error.answer.not.found=A response with such a number was not found. Try entering a right number.\n
+error.not.a.number=You did not enter a numeric value. Please enter a number.\n
 greetings=Hello! Introduce yourself, please:\n
-question=Question
+path.to.file.questions=questions_en.csv
+question=Question 
+student.answer=Your answer:\n
+test.suggesting=We suggest you take a test.\n
